some finishing touches