@@ -55,7 +55,7 @@ public class ExprParser extends AbstractParser {
 
     protected ClassReference currentFallback() {
         if (fallback.isEmpty()) throw new IllegalArgumentException("no fallback applied");
-        return fallback.get(fallback.size() - 1);
+        return fallback.getLast();
     }
 
     public void pushGenerics(Holder.Generics generics) {
@@ -68,7 +68,7 @@ public class ExprParser extends AbstractParser {
 
     public void popFallback() {
         if (this.fallback.isEmpty()) throw new IllegalStateException("fallback stack underflow");
-        this.fallback.remove(this.fallback.size() - 1);
+        this.fallback.removeLast();
     }
 
     public Expr expression() {
@@ -201,20 +201,19 @@ public class ExprParser extends AbstractParser {
             Token assign = previous();
             Expr value = assignment();
 
-            if (expr instanceof Expr.VarRef variable) {
-                Token name = variable.name();
+            if (expr instanceof Expr.VarRef(Token name, byte ordinal)) {
 
                 checkVarExistence(name, assign.type() != ASSIGN,
                         false);
                 checkVarType(name, value);
                 Executor executor;
                 if (assign.type() == ASSIGN) {
-                    varAnalyser.setHasValue(variable.ordinal());
+                    varAnalyser.setHasValue(ordinal);
                     executor = Executor.UNKNOWN;
                 } else
                     executor = getExecutor(varAnalyser.getType(name.lexeme()), assign, value);
 
-                return new Expr.Assign(name, value, assign, variable.ordinal(), executor.executor);
+                return new Expr.Assign(name, value, assign, ordinal, executor.executor);
             } else if (expr instanceof Expr.Get get) {
                 ClassReference target = finder.findRetType(get.object());
                 ClassReference fieldType = target.get().getFieldType(get.name().lexeme());
@@ -243,14 +242,13 @@ public class ExprParser extends AbstractParser {
 
             Token assign = previous();
 
-            if (expr instanceof Expr.VarRef ref) {
-                Token name = ref.name();
+            if (expr instanceof Expr.VarRef(Token name, byte ordinal)) {
 
                 ClassReference type = checkVarExistence(name, true, false);
                 if (!type.get().isChildOf(VarTypeManager.NUMBER)) {
                     errorStorage.errorF(name, "Operator '%s' can not be applied to '%s'", assign.lexeme(), type.absoluteName());
                 }
-                return new Expr.SpecialAssign(name, assign, ref.ordinal(), type);
+                return new Expr.SpecialAssign(name, assign, ordinal, type);
             }
 
             if (expr instanceof Expr.Get get) {
@@ -378,7 +376,6 @@ public class ExprParser extends AbstractParser {
                     operators.add(previous());
                     values.add(term());
                 }
-                //TODO add overloads
                 expr = new Expr.ComparisonChain(values.toArray(Expr[]::new), operators.toArray(Token[]::new), VarTypeManager.INTEGER.reference());
             } else {
                 expr = parseBinaryExpr(expr, operator, right);
@@ -895,7 +892,6 @@ public class ExprParser extends AbstractParser {
                     continue;
 
                 Registry<?> registry = BuiltInRegistries.REGISTRY.get(nativeClass.getOwner().location());
-
 
                 Object o = registry.get(location);
 
